More updates to make everything in sync.